-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.6.0
-
3
-
13708
If the filename (data.ioc_inlbuf1) passed to LL_IOC_LMV_SETSTRIPE has a slash in it then the name (d_name) of the striped directory will also have an embedded slash. Such a file cannot be accesses (except via .lustre/fid) and cannot be removed.
# ls /mnt/lustre ls: cannot access /mnt/lustre/d0/d1: No such file or directory t:lustre-release# sys_getdents -x /mnt/lustre d 200000007000001 '..' d 2c0000402000003 'd0/d1' d 200000002000001 '.lustre' #
This is a minor issue as normally llapi calls dirname() and basename() to get the directory and name. Hence this will not be encountered by (most) users. However llite and the mdt/mdd layers should better validate names that come from ioctls.